--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -14,6 +14,9 @@ spec:
   strategy:
     canary:
       steps:
+      - setWeight: 10
+      - pause:
+          duration: 120s
       - experiment:
           templates:
           - name: {{ include "canary-demo.fullname" . }}-preview
