--- a/templates/analysis.yaml
+++ b/templates/analysis.yaml
@@ -1,5 +1,4 @@
 {{- if .Values.analysis.enabled }}
-
 apiVersion: argoproj.io/v1alpha1
 kind: AnalysisTemplate
 metadata:
@@ -14,7 +13,7 @@ spec:
     successCondition: result[0] >= 0.95
     provider:
       prometheus:
-        address: "http://prometheus.example.com:{{args.prometheus-port}}"
+        address: {{ .Values.analysis.promethuesHost}}
         query: |
           sum(irate(
             istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}",response_code!~"5.*"}[5m]
