--- a/templates/analysis.yaml
+++ b/templates/analysis.yaml
@@ -16,9 +16,9 @@ spec:
         address: {{ .Values.analysis.promethuesHost }}
         query: |
           sum(irate(
-            istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}",response_code!~"5.*"}[5m]
+            istio_requests_total{reporter="source",destination_service={{ include "canary-demo.fullname" . }},response_code!~"5.*"}[5m]
           )) / 
           sum(irate(
-            istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}"}[5m]
+            istio_requests_total{reporter="source",destination_service={{ include "canary-demo.fullname" . }}[5m]
           ))
   {{- end }}
