--- a/templates/analysis.yaml
+++ b/templates/analysis.yaml
@@ -2,23 +2,22 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AnalysisTemplate
 metadata:
-  name: success-rate
+  name: success
 spec:
-  args:
-  - name: service-name
-  - name: prometheus-port
-    value: 9090
   metrics:
-  - name: success-rate
-    successCondition: result[0] >= "0.95"
+  - name: pass
+    interval: 5s
+    failureLimit: 1
     provider:
-      prometheus:
-        address: {{ .Values.analysis.promethuesHost }}
-        query: |
-          sum(irate(
-            istio_requests_total{reporter="source",destination_service={{ include "canary-demo.fullname" . }},response_code!~"5.*"}[5m]
-          )) / 
-          sum(irate(
-            istio_requests_total{reporter="source",destination_service={{ include "canary-demo.fullname" . }}[5m]
-          ))
+      job:
+        spec:
+          template:
+            spec:
+              containers:
+              - name: sleep
+                image: alpine:3.8
+                command: [sh, -c]
+                args: [exit 0]
+              restartPolicy: Never
+          backoffLimit: 0
   {{- end }}
