adding promethus address

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
       - analysis:
           templates:
           - templateName: success
-          - templateName: random-fail
+          # - templateName: random-fail
   {{- end }}
   template:
     metadata:
