--- a/templates/analysis.yaml
+++ b/templates/analysis.yaml
@@ -3,8 +3,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: AnalysisTemplate
 metadata:
   name: random-fail
-  annotations:
-    argocd.argoproj.io/sync-options: Prune=false
+  # annotations:
+  #   argocd.argoproj.io/sync-options: Prune=false
 spec:
   metrics:
   - name: random-fail
