--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -14,22 +14,22 @@ spec:
   strategy:
     canary:
       steps:
-      - setWeight: 20
-      - pause:
-          duration: "1m"
-      - setWeight: 50
-      - pause:
-          duration: "2m"
-      - experiment:
-          templates:
-          - name: {{ include "canary-demo.fullname" . }}-preview
-            specRef: canary
-            selector:
-              matchLabels:
-                app: {{ include "canary-demo.fullname" . }}-preview
-            metadata:
-              labels:
-                app: {{ include "canary-demo.fullname" . }}-preview
+      - setWeight: 25
+      # - pause:
+      #     duration: "1m"
+      # - setWeight: 50
+      # - pause:
+      #     duration: "2m"
+      # - experiment:
+      #     templates:
+      #     - name: {{ include "canary-demo.fullname" . }}-preview
+      #       specRef: canary
+      #       selector:
+      #         matchLabels:
+      #           app: {{ include "canary-demo.fullname" . }}-preview
+      #       metadata:
+      #         labels:
+      #           app: {{ include "canary-demo.fullname" . }}-preview
   {{- if .Values.analysis.enabled }}
       - analysis:
           templates:
