--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -15,6 +15,7 @@ spec:
     canary:
       steps:
       - setWeight: 25
+        - pause: {}
       # - pause:
       #     duration: "1m"
       # - setWeight: 50
