--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
       - analysis:
           templates:
           - templateName: random-fail
-          - templateName: success
+          - templateName: pass
             clusterScope: true
   {{- end }}
   template:
