adding promethus address

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
   {{- if .Values.analysis.enabled }}
       - analysis:
           templates:
-          - templateName: random-fail
+          # - templateName: random-fail
           - templateName: pass
             clusterScope: true
   {{- end }}
